# algorithms

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  bump_version.py  bump_version.sh  pyproject.toml
.github/workflows/: publish.yml
image/: utils.py
image/video/optical-flow/: block-matching.py  index.md
src/vicentin/: __init__.py
src/vicentin/deep_learning/: utils.py
src/vicentin/deep_learning/blocks/: __init__.py  cnn.py  mlp.py  smart_flatten.py
src/vicentin/deep_learning/loss/: BaseLoss.py  BetaVAELoss.py  GaussianKLDivergenceLoss.py  SupInfoNCE.py  VAELoss.py  WassersteinGANLoss.py  WeightedSumLoss.py  WrapTorchLoss.py  __init__.py
src/vicentin/deep_learning/models/: __init__.py  ae.py  siamese.py  vae.py
src/vicentin/deep_learning/train/: DistillationTrainer.py  GANTrainer.py  GenericTrainer.py  StandardTrainer.py  SupervisedTrainer.py  VAETrainer.py  __init__.py
src/vicentin/graph/: shortest_path.py
src/vicentin/image/: __init__.py  img2graph.py
src/vicentin/image/differentiation/: __init__.py  diff.py  diff_np.py  diff_torch.py
src/vicentin/image/regularization/: __init__.py  (+3 more)
src/vicentin/utils/: dispatcher.py
tests/image/: test_convolve.py  test_differentiation.py  test_utils.py
tests/optimization/minimization/: test_barrier_method.py  test_gradient_descent.py  test_ista.py  test_newton_method.py  test_projected_gradient.py  test_proximal_gradient.py
tests/optimization/problems/: test_lp.py  test_qp.py  test_sdp.py  test_socp.py
tests/optimization/root_finding/: test_newton_raphson.py
(+45 files in other folders)
