[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "vicentin"
version = "0.5.2"
description = "Personal collection of algorithms."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "numpy", "scipy", "jax",]
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
[[project.authors]]
name = "Felipe Vicentin"
email = "hello@a.vicentin.xyz"

[project.license]
text = "MIT License"

[project.urls]
Homepage = "https://github.com/Vinschers/algorithms"

[tool.setuptools.packages.find]
where = [ "src",]
exclude = [ "tests", "docs",]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "0.5.2"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
